# Validador-regulatorio

./: .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
tests/: test_validation_service.py  test_validator_catalog.py
validator_saas/: __init__.py  config.py  database.py  storage.py
validator_saas/api/: main.py  schemas.py
validator_saas/models/: __init__.py  entities.py
validator_saas/services/: validation_service.py
validator_saas/validators/: __init__.py  bacen.py  base.py  cadoc.py  dimp.py  dirf.py  layout.py
